--- a/signup.html
+++ b/signup.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <div class="bar">
-        <a class="nostyle" href="nutrition.html">
             <div>
                 <h1>Fit For Life</h1>
+                <h2>Stay In The Know!</h2>
             </div>
-        </a>
       </div>
 
       <div class="container1">
-
         <div class="info">
             <div>
                 <label for="email"><b>Email</b></label>
