--- a/nutrition.html
+++ b/nutrition.html
@@ -90,7 +90,10 @@
             </tbody>
         </table>
     </div>
-    <video src="images/vudeo.mp4"></video>
+    <div class="centimg">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNXJpMzhrODRnZDM3b2VwZjNxNm5zanZtZDBjMGlla2gxMWZsZm0waiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/blgpZbZbuS0ivklZny/giphy.gif" alt="">
+    </div>
+    
     <p><a href="index.html">Back</a></p>
 </body>
 </html>
