last interation before submissiontime

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row row-cols-2">
 
           <div class="bottom col">
-            <img class="right" src="images/deadlift.png" alt="">
+            <img class="shake right" src="images/deadlift.png" alt="">
           </div>
 
           <div class="bottom col">
@@ -87,7 +87,7 @@
           </div>
 
           <div class="bottom col">
-            <img class="left" src="images/meal.png" alt="">
+            <img class="shake left" src="images/meal.png" alt="">
           </div>
 
         </div>
@@ -97,7 +97,7 @@
         <div class="row row-cols-2">
 
           <div class="bottom col">
-            <img class="right" src="images/cardio.png" alt="">
+            <img class="shake right" src="images/cardio.png" alt="">
           </div>
 
           <div class="bottom col">
@@ -136,7 +136,7 @@
               </p>
           </div>
 
-          <div class="bottom col">
+          <div class="shake bottom col">
             <img class="left" src="images/fast.png" alt="">
           </div>
 
