--- a/signup.html
+++ b/signup.html
@@ -16,17 +16,17 @@
 
       <div class="container1">
         <div class="info">
-            <div>
+            <div class="space">
                 <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email" id="email" required>
             </div>
 
-            <div>
+            <div class="space">
                 <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="pw" id="pw" required>
             </div>
 
-            <div>
+            <div class="space">
                 <label for="reenter"><b>Re-enter Password</b></label>
            <input type="password" placeholder="Re-enter Password" name="reenter" id="reenter" required>
             </div>
