--- a/nutrition.html
+++ b/nutrition.html
@@ -91,12 +91,12 @@
         </table>
     </div>
     <div class="choose">
-        <label for="cars">Choose A Body builder:</label>
+        <label for="bb">Choose A Body builder:</label>
 
-    <select name="cars" id="cars">
-      <option value="volvo">Jay Cutler</option>
-      <option value="saab">Ronnie Coleman</option>
-      <option value="mercedes">Arnold Schwarzenegger</option>
+    <select name="bb" id="bb">
+      <option value="Jay">Jay Cutler</option>
+      <option value="Ronnie">Ronnie Coleman</option>
+      <option value="Arnold">Arnold Schwarzenegger</option>
     </select>
     </div>
     
